[2317] Upgrade to Micronaut 4 Initial Pass
-Still have failing tests due issue with LocalDate where after retrieving from the database the date is 1 day earlier than what was initially set.
-Still need to refactor use of subscribeOn publishOn as controllers are currently running everything on the event loop thread.